@@ -1,3 +1,8 @@
+2017-08-06  Uros Bizjak  <ubizjak@gmail.com>
+
+	* config/alpha/alpha.c (alpha_reorg): If trap is the last active
+	insn in the function, emit NOP after the insn.
+
 2017-08-06  Tom de Vries  <tom@codesourcery.com>
 
 	* omp-expand.c (expand_oacc_for): Add missing edge probability for tile
